--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
           </execution>
          </executions>
       </plugin>
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>9.4.3.v20170317</version>
+      </plugin>
     </plugins>
   </build>
 </project>
