--- a/pom.xml
+++ b/pom.xml
@@ -43,16 +43,6 @@
 	    <artifactId>jackson-jaxrs-json-provider</artifactId>
 	    <version>2.6.1</version>
 	</dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-deploy</artifactId>
-      <version>9.4.2.v20170220</version>
-    </dependency>
-   <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-server</artifactId>
-      <version>9.4.2.v20170220</version>
-   </dependency>
   </dependencies>
   <build>
     <finalName>shareit</finalName>
@@ -71,7 +61,7 @@
         <artifactId>heroku-maven-plugin</artifactId>
         <version>1.1.3</version>
 		<configuration>
-		  <appName>guarded-earth-88409</appName>
+		  <appName>stormy-earth-43709</appName>
         </configuration>
       </plugin>
       <plugin>
