--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,11 @@
   <artifactId>ShareIt</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Shareit Maven Webapp</name>
+  <name>ShareIt Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
