--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
         <version>9.4.3.v20170317</version>
+        <configuration>
+          <scanIntervalSeconds>3</scanIntervalSeconds>
+          <scanTargets>
+            <scanTarget>target/classes</scanTarget>
+          </scanTargets>
+        </configuration>
       </plugin>
     </plugins>
   </build>
