--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 	    <artifactId>jackson-jaxrs-json-provider</artifactId>
 	    <version>2.6.1</version>
 	</dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.test-framework.providers</groupId>
+      <artifactId>jersey-test-framework-provider-jetty</artifactId>
+      <version>2.25.1</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>shareit</finalName>
