Add listener-class to web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,9 +25,13 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-
     <servlet-mapping>
         <servlet-name>Media Resource</servlet-name>
         <url-pattern>/shareit/*</url-pattern>
     </servlet-mapping>
+    <listener>
+        <listener-class>
+            edu.hm.shareit.ShareitServletContextListener
+        </listener-class>
+    </listener>
 </web-app>
