--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,7 @@
         </init-param>
         <init-param>
             <param-name>javax.ws.rs.Application</param-name>
-            <param-value>edu.hm.ShareItApplication</param-value>
+            <param-value>edu.hm.shareit.ShareItApplication</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
